# angular-bazel-example

./: .bazelrc  BUILD.bazel  WORKSPACE  angular.tsconfig.json  package.json
.circleci/: config.yml
src/: BUILD.bazel  app.ts  tsconfig.json
src/hello-world/: BUILD.bazel
src/lib/: BUILD.bazel
tools/: BUILD  defaults.bzl
